// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<header
  className="sc-jSgupP bygOYT"
  id="header"
  loading={false}
>
  <div
    className="sc-bdfBwQ cVDJVy"
    loading={false}
  >
    <img
      alt="Hello World"
      src="https://example.com/pankaj.jpg"
    />
  </div>
  <div
    className="sc-eCssSg cfUQHH content"
  >
    <div
      className="sc-hKgILt iJuBaw"
      loading={false}
    >
      <h1
        className="sc-gsTCUz kcieI"
      >
        Hello World
      </h1>
      <p
        className="sc-dlfnbm UfRYz"
      >
        Welcome to the Homepage
      </p>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly with children 1`] = `
<header
  className="sc-jSgupP bygOYT"
  id="header"
  loading={false}
>
  <div
    className="sc-bdfBwQ cVDJVy"
    loading={false}
  >
    <img
      alt="Hello World"
      src="https://example.com/pankaj.jpg"
    />
  </div>
  <div
    className="sc-eCssSg cfUQHH content"
  >
    <div
      className="sc-hKgILt iJuBaw"
      loading={false}
    >
      <h1
        className="sc-gsTCUz kcieI"
      >
        Hello World
      </h1>
      <p
        className="sc-dlfnbm UfRYz"
      >
        Welcome to the Homepage
      </p>
    </div>
  </div>
  Children Tag
</header>
`;
